Fixed navbar vertical height collapsing

--- a/landing-page/src/index.css
+++ b/landing-page/src/index.css
@@ -212,6 +212,7 @@ p {
   top: 0;
   z-index: 100;
   height: 80px;
+  flex-shrink: 0 !important; /* Impedisce al flexbox di schiacciare la navbar */
   display: flex;
   align-items: center;
 }
